--- a/index.html
+++ b/index.html
@@ -17,80 +17,44 @@
     <div class="container">
       <div class="stop">
         <br><br>
-        <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>When Smurfs give <span class="love">love</span>  advice.</h1></marquee>
+        <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>Let the <span class="love">smurfs</span>  do the shopping for you!</h1></marquee>
       </div>
         <img id="smurf" src="img/smurf.png" alt="Smurfs in love">
-    </div>
-      <div class="container">
-        <div class="container">
-        <p id="story" style="display: none;" > You're not going to believe this. But, Smurfs are real! I know this, because my friend <span class ="person1"></span> was having a tiff with her boyfriend over the un-washed dishes and the over-stuffed trash. "These <span class="adjective1"></span> things happen and you just have to roll with it!", said   <span class="person2"></span>, who is my friend's boyfriend. <span class ="person1"></span> then replied, "
-          <span class="exclamation1"></span>! You have to help me with the chores! Unless you think some <span class="adjective2"></span>, forrest creatures are just going to magically appear in our kitchen!"
-         Just then, their pet <span class="animal"></span> started <span class="verb1"></span>.
-          "Why is <span class="petName"> </span> doing that?", said <span class=person2></span>.
-          After <span class="verb2"></span> around, they both shrugged and decided to go to bed. They would just have to handle the chores the next day. Early that next morning as he woke up, <span class="person2"></span> heard clanging in the kitchen. "Honey, come here!" said <span class="person2"></span>. <span class="person1"></span> ran to the kitchen to find two Smurfs, as blue as could be, washing their dishes! <span class="adjective3"></span> Smurf looked up and said,
-          "<span class ="exclamation2"></span>! You'll have to help me with the trash. I am far too little to pick it up!" Then, <span class="adjective4"></span> Smurf said, "We try to help each other everyday and we never want to fight!"
-          "That's nice <span class="adjective3"></span> and <span class="adjective4"></span> Smurf.", said <span class="person1"></span>. "But I really need a cup of coffee...." "Oh, okay!", said <span class="adjective4"></span> Smurf. "But we don't like drip coffee. We only make french-press."</p>
+        <div class=" story list">
+           <p><span class="item1"></span></p>
+           <br>
+           <p><span class="item2"></span></p>
+           <br>
+           <p><span class="item3"></span></p>
+           <br>
+           <p><span class="item4"></span></p>
       </div>
      </div>
     </div>
      <div class="container">
-      <div id="blanks">
-        <h1 id="header">FILL IN THE BLANKS FOR A SMURF-TASTIC STORY!</h1>
         <br><br>
-        <form>
+        <form id="smurf-form">
+          <h1 id="header">SEND THE SMURFS SHOPPING!</h1>
           <br>
           <div class="form-group">
-            <label for="person1">&nbsp;&nbsp;a name!</label>
-            <input id="person1" class="form-control" type="text">
+            <label for="item1">&nbsp;&nbsp;item one</label>
+            <input id="iitem1" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="person2">&nbsp;&nbsp;<em>another</em> name!</label>
-            <input id="person2" class="form-control" type="text">
+            <label for="item2">&nbsp;&nbsp;item two</label>
+            <input id="item2" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="animal">&nbsp;&nbsp;an animal!</label>
-            <input id="animal" class="form-control" type="text">
+            <label for="item3">&nbsp;&nbsp;item three</label>
+            <input id="item3" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="petName">&nbsp;&nbsp;a pet's name!</label>
-            <input id="petName" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="exclamation1">&nbsp;&nbsp;an exclamation!</label>
-            <input id="exclamation1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="adjective1">&nbsp;&nbsp;an adjective!</label>
-            <input id="adjective1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="adjective2">&nbsp;&nbsp;<em>another</em> adjective!</label>
-            <input id="adjective2" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="exclamation2">&nbsp;&nbsp;<em>another</em> exclamation!</label>
-            <input id="exclamation2" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="verb1">&nbsp;&nbsp;a transitive verb using "ing"!</label>
-            <input id="verb1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="verb2">&nbsp;&nbsp;<em>another</em> transitive verb using "ing"!</label>
-            <input id="verb2" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="adjective3">&nbsp;&nbsp;an adjective for a Smurf!</label>
-            <input id="adjective3" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="adjective4">&nbsp;&nbsp;an adjective for the <em>second</em> Smurf!</label>
-            <input id="adjective4" class="form-control" type="text">
+            <label for="item4">&nbsp;&nbsp;item four</label>
+            <input id="item4" class="form-control" type="text">
           </div>
           <br><br>
-          <button id="button" type="submit" class="btn btn-defualt">SHOW ME MY SMURFY STORY!</button>
+          <button id="button" type="submit" class="btn btn-defualt">SEND THE SMURFS SHOPPING!</button>
         </form>
-      </div>
     </div>
   </body>
 </html>
