Add another version of jquery.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="stop">
         <br><br>
-        <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>Let the <span class="love">smurfs</span>  do the shopping for you!</h1></marquee>
+        <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>Let <span class="love">smurfs</span>  do the shopping for you!</h1></marquee>
       </div>
         <img id="smurf" src="img/smurf.png" alt="Smurfs in love">
         <div class=" story list">
@@ -34,11 +34,11 @@
      <div class="container">
         <br><br>
         <form id="smurf-form">
-          <h1 id="header">SEND THE SMURFS SHOPPING!</h1>
+          <h1 id="header">Smurfs cant carry heavy items!</h1>
           <br>
           <div class="form-group">
             <label for="item1">&nbsp;&nbsp;item one</label>
-            <input id="iitem1" class="form-control" type="text">
+            <input id="item1" class="form-control" type="text">
           </div>
           <div class="form-group">
             <label for="item2">&nbsp;&nbsp;item two</label>
