Add nother attempt for jquery, not working yet.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <div class="container">
         <br><br>
         <form id="smurf-form">
-          <h1 id="header">Smurfs cant carry heavy items!</h1>
+          <h1 id="header">Smurfs can't carry heavy items!</h1>
           <br>
           <div class="form-group">
             <label for="item1">&nbsp;&nbsp;item one</label>
