Add new shorter jquery and hide class.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>Let <span class="love">smurfs</span>  do the shopping for you!</h1></marquee>
       </div>
         <img id="smurf" src="img/smurf.png" alt="Smurfs in love">
-        <div class=" story list">
+        <div class="story list">
            <p><span class="item1"></span></p>
            <br>
            <p><span class="item2"></span></p>
@@ -33,7 +33,7 @@
     </div>
      <div class="container">
         <br><br>
-        <form id="smurf-form">
+        <form id="blanks">
           <h1 id="header">Smurfs can't carry heavy items!</h1>
           <br>
           <div class="form-group">
