--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <marquee loop="1" behavior=slide direction="left" scrollamount="18"><h1>Let <span class="love">smurfs</span>  do the shopping for you!</h1></marquee>
       </div>
         <img id="smurf" src="img/smurf.png" alt="Smurfs in love">
-        <div class="story list">
+        <div class="story">
            <p><span class="item1"></span></p>
            <br>
            <p><span class="item2"></span></p>
